[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
chrono = "0.4.31"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
eframe = "0.23.0"
rspotify = "0.12.0"
thiserror = "1.0.49"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
cpal = { version = "0.15.2", features = ["jack"] }
audio-visualizer = "0.4.0"
spectrum-analyzer = "1.5.0"
egui_plot = "0.23.0"
ringbuffer = "0.15.0"
url = "2.4.1"
async-trait = "0.1.73"
anyhow = "1.0"
rocket = "=0.5.0-rc.3"
webbrowser = "0.8.11"
inquire = "0.6.2"
